# iqdeepdive

./: .env.sample  .gitignore  .mcp.json  AGENTS.md  ATTRIBUTION.md  README.md  azure.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
data/index-data/: hrdocs-exported.jsonl
data/workiq-fixtures/: customer-escalation-hammer-unavailable.txt  urgent-professional-claw-hammer-out-of-stock.txt  weekly-inventory-report-seattle-flagged.txt
infra/: create-fabric-graph.py  create-lakehouse.py  create-search-indexes.py  create-toolbox-foundryiq.py  create-toolbox.py  main.bicep  main.parameters.json  postdeploy.py  setup-env.py  test-fabric-api-sdk.py
infra/hooks/: postdeploy.ps1  postdeploy.sh  postprovision.ps1  postprovision.sh
notebooks/: fabriciq-dataagent-mcp.ipynb  fabriciq-dataagent.ipynb  fabriciq-graph.ipynb  fabriciq-ontology-mcp.ipynb  foundryiq-basic.ipynb  foundryiq-fabriciq-ontology.ipynb  foundryiq-fabriciq.ipynb  foundryiq-mcp.ipynb  foundryiq-workiq-fabriciq.ipynb  foundryiq-workiq.ipynb  part1-standard-foundry-iq-kb.ipynb  part2-search-mcp-kb.ipynb  part3-fabric-iq-to-kb.ipynb  part4-work-iq-to-kb.ipynb  part5-work-iq-fabric-iq-to-kb.ipynb  requirements.txt
src/agent-foundry-iq-api/: main.py
src/agent-foundry-iq-fabric-toolbox/: main.py  pyproject.toml
src/agent-foundry-iq-mcp/: main.py
src/agent-foundry-iq-toolbox/: main.py
src/agent-foundry-iq-workiq-toolbox/: main.py  pyproject.toml
src/agent-foundryiq-api/: main.py  pyproject.toml
src/agent-foundryiq-mcp/: main.py  pyproject.toml
(+12 files in other folders)
