[project]
name = "foundry-iq-hr-agent-api"
version = "0.1.0"
description = "Agent Framework HR helper using the Foundry IQ retrieval API"
requires-python = ">=3.12"
dependencies = [
    "agent-framework-core>=1.10.0",
    "agent-framework-foundry>=1.10.0",
    "agent-framework-foundry-hosting>=1.0.0a260630",
    "agent-framework-openai>=1.10.0",
    "azure-identity>=1.25.3",
    "azure-monitor-opentelemetry>=1.8.7",
    "azure-search-documents==12.1.0b1",
    "python-dotenv>=1.2.2",
]

[tool.uv]
package = false
